--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,4 +30,7 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  <listener>
+  	<listener-class>listener.PersistenceListener</listener-class>
+  </listener>
 </web-app>
